mongo/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: k8s-dashbaord.com
      http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: kubernetes-dashboard-web
              port:
                number: 8000
