mongo/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app.com
      http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: my-service
              port:
                number: 8080
